syntax = "proto3";

package pb;

import "google/api/annotations.proto";

// The kv service definition.
service Kv {
  rpc Get (GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/kv/{key}"
    };
  }
  rpc Set (SetRequest) returns (SetResponse) {
    option (google.api.http) = {
      put: "/v1/kv"
      body: "*"
    };
  }
  rpc Delete (DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
        delete: "/v1/kv/{key}"
    };
  }
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
  string error = 2;
}

message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse {
  string error = 1;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  string error = 1;
}